--- a/primary/grade4/exercise/素数练习-4.md
+++ b/primary/grade4/exercise/素数练习-4.md
@@ -1,7 +1,45 @@
 # 素数练习-4
 
-最小的素数是哪个？
-素数中有几个是偶数？
-最小的奇数素数是哪个？
-最小的合数是哪个？
-最小的奇数合数是哪个？
+1. 最小的素数是哪个？
+
+
+
+2. 素数中有几个是偶数？
+
+
+
+3. 最小的奇数素数是哪个？
+
+
+
+4. 最小的合数是哪个？
+
+
+
+5. 最小的奇数合数是哪个？
+
+
+
+
+$\Large Goldbach Conjecture 哥德巴赫猜想$
+
+6. 将40拆成两个素数之和
+
+
+
+
+
+7. 将80拆成两个素数之和
+
+
+
+
+
+8. 将100拆成两个素数之和
+
+
+
+
+
+9. 将下面八个自然数平均分成两组，使得每组数的乘积相等：
+    $$\large 2 \; 5 \; 14\;24\;27\;55\;56\;99$$
