update prime and factor lesson markdown

--- a/primary/grade4/exercise/约数练习-5.md
+++ b/primary/grade4/exercise/约数练习-5.md
@@ -1,31 +1,31 @@
 # 约数（因数）练习题-5
 
 1. 边长为自然数，面积为105的形状不同的长方形共有多少种？
-$\\[5em]$
+$\\[8em]$
 
 
 
 
-2. 五个相邻自然数的乘积是55440，求这无个自然数。
-$\\[5em]$
+2. 五个相邻自然数的乘积是55440，求这五个自然数。
+$\\[8em]$
 
 
 
 
 3. 自然数 $a$ 乘以 338，恰好是自然数 $b$ 的平方(即$b^2=b\times b$),求 $a$ 的最小值以及 $b$ 的值。
-$\\[5em]$
+$\\[8em]$
 
 
 
 
 4. 求1050的约数共有多少个？
-$\\[5em]$
+$\\[8em]$
 
 
 
 
 5. 求50的约数个数，并写出所有约数（因数）。
-$\\[5em]$
+$\\[8em]$
 
 
 
