XES update 3-5-6 lessons

--- a/XES/三年级/第5讲 乘法巧算.md
+++ b/XES/三年级/第5讲 乘法巧算.md
@@ -1,6 +1,6 @@
-第5讲 乘法巧算
+# 第5讲 乘法巧算
 
-# 巩固题
+## 巩固题
 
 1. 计算
 
@@ -10,7 +10,7 @@
 
     $(1)\;45\times(100+2)=\underline{\qquad\qquad} \qquad\qquad\qquad (2)\;25\times(50-4)=\underline{\qquad\qquad}\\[5em]$
 
-# 基础过关题
+## 基础过关题
 
 3. 列竖式计算
    
@@ -28,7 +28,7 @@
 
    $(1)\;8\times(125+2)=\underline{\qquad\qquad} \qquad\qquad\qquad (2)\;6\times(100+3)=\underline{\qquad\qquad}\\[5em]$
 
-# 能力提升
+## 能力提升
 
 7. 简便运算
 
@@ -42,7 +42,7 @@
 
    $(1)\;23\times97=\underline{\qquad\qquad} \qquad\qquad\qquad (2)\;43\times201=\underline{\qquad\qquad}\\[5em]$
 
-# 创新挑战
+## 创新挑战
 
 10. 已知 $7\times11\times13=1001$, 计算下列各式的值：  
 
