--- a/XES/三年级/暑假加油站解析/第2讲 加法原理.md
+++ b/XES/三年级/暑假加油站解析/第2讲 加法原理.md
@@ -35,7 +35,7 @@ $\\[5em]$
 
 2. 如图所示，一只青蛙在五片荷叶之间跳动，每次都从一片荷叶跳到相邻的另一片荷叶上。如果青蛙开始在D荷叶上，然后连续跳了3次，那么一共有______种不同的跳法。
 
-![L2T8](第2讲T8.png)
+![L2T8](image/第2讲T8.png)
 $\\[5em]$
 
 3. 又到了炎热的夏天，又是吃西瓜的季节，艾迪准备将12个相同的西瓜分成3堆，共有______种不同的分法。
@@ -45,7 +45,7 @@ $\\[5em]$
 
 如图，已知蚂蚁要从一个四棱锥的顶点P出发，沿着这个四棱锥的棱依次不重复地走遍5个顶点即停止，请问：这只蚂蚁一共有多少种不同的走法？
 
-![L2T10](第2讲T10.png)
+![L2T10](image/第2讲T10.png)
 
 ## 参考答案
 
@@ -123,7 +123,7 @@ $\\[5em]$
 
 2. 如图所示，一只青蛙在五片荷叶之间跳动，每次都从一片荷叶跳到相邻的另一片荷叶上。如果青蛙开始在D荷叶上，然后连续跳了3次，那么一共有______种不同的跳法。
 
-![L2T8](第2讲T8.png)
+![L2T8](image/第2讲T8.png)
 
     解：用画图方式，画出各种跳法可能性。
     每跳一次，树形图增加一段，所以，一共有三段，如下图：
@@ -152,7 +152,7 @@ $\\[5em]$
 
 如图，已知蚂蚁要从一个四棱锥的顶点P出发，沿着这个四棱锥的棱依次不重复地走遍5个顶点即停止，请问：这只蚂蚁一共有多少种不同的走法？
 
-![L2T10](第2讲T10.png)
+![L2T10](image/第2讲T10.png)
 
 解：画树形图如下图：
 
