--- a/XES/三年级/暑假加油站解析/第6讲 和差倍（一）.md
+++ b/XES/三年级/暑假加油站解析/第6讲 和差倍（一）.md
@@ -58,45 +58,60 @@ $\\[7em]$
 
 ## 答案参考
 
-1. 线段图
+1. 果园共260棵桃树和梨树，其中桃树的颗数比梨树多20棵，桃树和梨树各有多少棵？线段图
 
-    梨树：$——$  
-    桃树：$——\cdot—$多20  
-    总和260，  
-    梨树：$(260-20)\div 2=120$棵  
+    $\left . \begin{aligned}
+    梨树:& ——\\ 
+    桃树:& ——\cdot\overset{\text{20}}{—} \\
+    \end{aligned}\right \} 260$
+
+    梨树：$(260-20)\div (1+1)=120$棵  
     桃树：$260-120=140, 或者 120+20=140$棵  
     答：桃树140棵，梨树120棵。
 
-2. 线段图
+2. 妈妈买了一些荔枝和葡萄，一共花了60元，已知买荔枝的钱数是葡萄的2倍少3元，那么买荔枝花了多少元？线段图
 
-    葡萄：$——$  
-    荔枝：$——\cdot——$少3  
-    总和60，  
-    葡萄：$(60+3)\div 3=21$元  
+    $\left . \begin{aligned}
+    葡萄:& ——\\ 
+    荔枝:& ——\cdot—\overset{\text{3}}{—} \\
+    \end{aligned}\right \} 60$
+
+    葡萄：$(60+3)\div (1+2)=21$元  
     荔枝：$60-21=39, 或者 21\times2-3=39$元  
     答：荔枝花了39元，葡萄花了21元。
 
-3. 线段图
+3. 两个连续单数的和是36，这两个数分别是多少？
+线段图
 
-    小单数：$——$  
-    大单数：$——\cdot—$多2  
-    总和36，  
-    小单数：$(36-2)\div 2=17$  
+    $\left . \begin{aligned}
+    小单数:& ——\\ 
+    大单数:& ——\cdot\overset{\text{2}}{—} \\
+    \end{aligned}\right \} 36$
+ 
+    小单数：$(36-2)\div (1+1)=17$  
     大单数：$36-17=19,或者 17+2=19$  
     答：这两个数分别是17和19。
 
+4. 甲乙两个仓库共存大米56包，从乙仓库调8包到甲仓库，两个仓库大米的包数就同样多了，甲乙两个仓库原有大米各多少包？线段图
 
-4. 线段图
+    $\left . \begin{aligned}
+    甲:& ——\cdot\overset{\text{+8}}{—}\\ 
+    乙:& ——\cdot—\overset{\text{-8}}{—} \\
+    \end{aligned}\right \} 56$
 
-    甲：$——\cdot—$加8包  
-    乙：$——\cdot—$减8包  
-    共56包，  
-    甲：$(56-8\times2)\div 2=20$包  
+    甲：$(56-8\times 2)\div 2=20$包  
     乙：$56-20=36,或者 20+8\times2=36$包  
     答：甲乙两仓库原有大米分别为20包和36包。
 
-5. 线段图
+5. 春蕾小学三年级同学给山区的学生捐书，一、二、三班共捐书300本，一班、二班两个班捐书总数比三班多60本，如果三班比一班多40本，求三个班各捐了多少本书？线段图
 
+    $\left . \begin{aligned}
+    一班:& ——\cdot\\ 
+    三班:& ——\cdot\overset{\text{40}}{—} \\
+    一班+二班:& ——\cdot—\cdot\overset{\text{60}}{-—} \\
+    \end{aligned}\right \} 一班二班三班合计300$
+
+    或者列表如下：  
     |班级|线段|多少说明|
     |---|---|---|
     |一班：|$——$||  
@@ -110,7 +125,10 @@ $\\[7em]$
     三班捐书：80+40=120本  
     答：一班捐了80本，二班捐了100本，三班捐了120本。
 
-6. （1）线段图
+6. 甲乙两个农场都种植玉米和小麦，今年都获得了丰收。
+   （1）甲农场比乙农场多种植了500万吨小麦，如果甲农场种植的小麦比乙农场的4倍少100万吨，请问：甲农场种植了多少万吨小麦？
+   
+   线段图
    
    乙：$——$  
    甲：$——\cdot\underbrace{——\cdot——\cdot—}_{500}-$少100  
@@ -118,7 +136,9 @@ $\\[7em]$
    甲：$200\times4-100=700$万吨  
    答：甲种植了700万吨小麦。
    
-   （2）线段图
+   （2）甲农场比乙农场多种植了50万吨玉米，如果甲农场种植的玉米比乙农场的3倍多20万吨，请问：甲农场种植了多少万吨玉米？
+   
+   线段图
 
    乙：$——$  
    甲：$——\cdot\underbrace{——\cdot——\cdot—}_{50}$多20  
@@ -126,10 +146,14 @@ $\\[7em]$
    甲：$15\times3+20=65$万吨  
    答：甲种植了65万吨玉米。
 
-7. 解：$3\times40=120(千克), 120-32=88(千克)$  
+7. 新型涂层的制作需要将甲乙两种涂层混合在一起，现在甲涂层有40千克，乙涂层有32千克，要想乙涂层的重量是甲涂层的3倍，还需要再加多少千克乙涂层？
+
+    解：$3\times40=120(千克), 120-32=88(千克)$  
    答：需要再加88千克乙涂层。
 
-8. 线段图
+8. 甲乙两车原有乘客共43人，到某地后，从甲车下去5人，乙车上来2人，这是甲车人数正好是乙车人数的3倍，甲车原来有乘客多少人？
+   
+   线段图
 
    $\left. \begin{gathered}
     乙车人数：—上2\\ 
@@ -141,7 +165,9 @@ $\\[7em]$
    甲车：$10\times3+5=35$人  
    答：甲车原来有乘客35人。 
 
-9.  画线段图如下
+9.  大力士阿基里斯一手可以搬运20千克的物品，而苏格拉底两手可以搬运10千克的物品，两人合作从甲地将450千克的小麦搬到乙地，要用最短的时间搬完。阿基里斯搬的次数是苏格拉底的2倍，那么，阿基里斯搬了多少千克的小麦？苏格拉底搬了多少千克的小麦？（阿基里斯和苏格拉底都是用两手搬运物品）
+    
+    画线段图如下
 
     阿基里斯两手搬运$20\times2=40$千克，苏格拉底两手搬运10千克。  
     则 阿基里斯搬运1次=苏格拉底搬运4次；  
@@ -156,16 +182,18 @@ $\\[7em]$
 
     答：苏格拉底搬运了50千克小麦，而阿基里斯搬运了400千克小麦。
 
-10.  画线段图方法   
+10. 书桌上有黑白棋子共100枚，将它们分成由少至多的3堆，每堆的黑棋子依次为白棋子的1、2、3倍，同时第二堆的白棋子恰好为第一堆白棋子的2倍，第三堆的白棋子恰好为第一堆白棋子的3倍，那么一共有多少枚白棋子？
 
-|堆|箭头|分类|线段|
-|---|---|---|---|
-|第一堆| $\to$|  白：|——|
-|第一堆| $\to$|  黑：|——|
-|第二堆| $\to$|  白：|——$\cdot$——|
-|第二堆| $\to$|  黑：|——$\cdot$——$\cdot$——$\cdot$——|
-|第三堆| $\to$|  白：|——$\cdot$——$\cdot$——|
-|第三堆| $\to$|  黑：|——$\cdot$——$\cdot$——$\cdot$——$\cdot$——$\cdot$——$\cdot$——$\cdot$——$\cdot$——|
+    画线段图方法   
+
+    |堆|箭头|分类|线段|
+    |---|---|---|---|
+    |第一堆| $\to$|  白：|——|
+    |第一堆| $\to$|  黑：|——|
+    |第二堆| $\to$|  白：|——$\cdot$——|
+    |第二堆| $\to$|  黑：|——$\cdot$——$\cdot$——$\cdot$——|
+    |第三堆| $\to$|  白：|——$\cdot$——$\cdot$——|
+    |第三堆| $\to$|  黑：|——$\cdot$——$\cdot$——$\cdot$——$\cdot$——$\cdot$——$\cdot$——$\cdot$——$\cdot$——|
 
 共100枚，计算第一堆的黑棋子和白棋子的数量为：  
 $100\div(2+6+12)=100\div 20=5$枚；  
