update grade5 math

--- a/primary/grade5/整除篇.md
+++ b/primary/grade5/整除篇.md
@@ -5,7 +5,7 @@
 
 ## 一、整除的基本概念
 
-### 整除的定义
+### 1.1 整除的定义
 
 所谓**整除**，就是一个整数被另一个整数“**除尽**”，其数学定义如下：
 
@@ -13,53 +13,42 @@
 
   若不存在这样的整数 $k$，使得 $b=ak$，我们就说 $b$ 不能被 $a$ 整除，或称 $a$ 不能整除 $b$，记作 $a \nmid b$
 
-### 约数与倍数
+### 1.2 约数与倍数
 
 如果 $a\mid b$, $a$ 叫做 $b$ 的约数（或因数Factor），$b$ 叫做$a$ 的倍数。整除属于除尽的一种特殊情况。   
 
 
-## 二、整除的基本规律
+## 二、整除的判断法
 
-### 被2,3,5整除的数
+### 2.1 尾数判断法--被2,5,4,25,8,125整除的数
 
-- 能被2整除的数：个位上的数能被2整除（偶数都能被2整除），那么这个数能被2整除
+- 能被2或5整除的数：个位数字能被2或5整除，那么这个数能被2或5整除（偶数都能被2整除）
+- 能被4或25整除的数：末两位能被4或25整除，那么这个数能被4或25整除
+- 能被8或125整除的数：末三位能被8或125整除，则该数一定能被8或125整除
+  
+### 2.2 数字求和法--被3、9整除的数
+
 - 能被3整除的数：各个数位上的数字和能被3整除，那么这个数能被3整除
-- 能被5整除的数，个位上为0或5的数都能被5整除，那么这个数能被5整除
-  
-### 能被4,6,8,9,10,12整除的数
-
-- 能被4整除的数：个位和十位所组成的两位数能被4整除，那么这个数能被4整除
-- 能被6整除的数：各数位上的数字和能被3整除的偶数，如果一个数既能被2整除又能被3整除，那么这个数能被6整除
-- 能被8整除的数：一个整数的末3位若能被8整除，则该数一定能被8整除。
 - 能被9整除的数：各个数位上的数字和能被9整除，那么这个数能被9整除
-- 能被10整除的数：如果一个数既能被2整除又能被5整除，那么这个数能被10整除（即个位数为零）
-- 能被12整除的数：若一个整数能被3和4整除，则这个数能被12整除
+- 弃3法和弃9法
   
-### 能被7,11,13,17整除的数
+### 2.3 “截尾、倍数、加减、验和差”四步法--能被7,13,17整除的数
 
 - 能被7整除的数：若一个整数的个位数字截去，再从余下的数中，减去个位数的2倍，如果差是7的倍数，则原数能被7整除。如果差太大或心算不易看出是否7的倍数，就需要继续上述「**截尾、2倍、相减、验差**」的过程，直到能清楚判断为止。例如，判断133是否7的倍数的过程如下：$13-3\times 2＝7$，所以133是7的倍数；又例如判断6139是否7的倍数的过程如下：$613-9×2＝595，59-5×2＝49$，所以6139是7的倍数，余类推。
-- 能被11整除的数：(1) 奇数位（从左往右数）上的数字和与偶数位上的数字和之差（大数减小数）能被11整除，则该数就能被11整除。 或 (2) 11的倍数检验法也可用上述检查7的「割尾法」处理, 过程唯一不同的是：倍数不是2而是1。
 - 能被13整除的数：若一个整数的个位数字截去，再从余下的数中，加上个位数的4倍，如果和是13的倍数，则原数能被13整除。如果和太大或心算不易看出是否13的倍数，就需要继续上述「**截尾、4倍、相加、验和**」的过程，直到能清楚判断为止。
 - 能被17整除的数：若一个整数的个位数字截去，再从余下的数中，减去个位数的5倍，如果差是17的倍数，则原数能被17整除。如果差太大或心算不易看出是否17的倍数，就需要继续上述「**截尾、5倍、相减、验差**」的过程，直到能清楚判断为止。
 
+### 2.4 奇偶位求差法--被11整除的数
 
-## 三、整除基本性质
+- 能被11整除的数：(1) 奇数位（从左往右数）上的数字和与偶数位上的数字和之差（大数减小数）能被11整除，则该数就能被11整除。 或 (2) 11的倍数检验法也可用上述检查7的「割尾法」处理, 过程唯一不同的是：倍数不是2而是1。
 
-关于整数的整除，有如下一些基本性质：  
+### 2.5 组合法--被6、10、12整除的数
 
-- 性质1 若 $b｜a，c｜b，$则 $c｜a$．  
-- 性质2 若 $c｜a，c｜b，$则 $c｜(a±b)$．  
-- 性质3 若 $c｜a，c\nmid b，$则 $c \nmid (a±b)$．  
-- 性质4 若 $b｜a，d｜c，$则 $bd｜ac$．  
-- 性质5 若 $a=b＋c$，且 $m｜a，m｜b$，则 $m｜c$．  
-- 性质6 若 $b｜a，c｜a$，则 $[b，c]｜a$, 此处$[b，c]$为 $b，c$ 的最小公倍数. 特别地，当 $(b，c)=1$ 时，$bc｜a$, 此处 $(b，c)$ 为 $b，c$ 的最大公约数．  
-- 性质7 若 $c｜ab$，且 $(c，a)=1$，则 $c｜b$．特别地，若 $p$ 是素数，且 $p｜ab$，则 $p｜a$ 或 $p｜b$．  
-- 性质8 若 $a≠b，n$ 是自然数，则 $(a-b)｜(a^n-b^n)$．  
-- 性质9 若 $a≠-b，n$ 是正偶数，则 $(a＋b)｜(a^n-b^n)$．  
-- 性质10 若 $a≠-b，n$ 是正奇数，则 $(a＋b)｜(a^n＋b^n)$．
+- 能被6整除的数：各数位上的数字和能被3整除的偶数，如果一个数既能被2整除又能被3整除，那么这个数能被6整除
+- 能被10整除的数：如果一个数既能被2整除又能被5整除，那么这个数能被10整除（即个位数为零）
+- 能被12整除的数：若一个整数能被3和4整除，则这个数能被12整除
 
-
-## 四、其他特殊方法判断整除7、11或13
+### 2.6 1001法--被7、11或13整除的数
 
 - 还有一种判断整数能不能被7整除的方法，这种方法也可以用来判断整数是否能被11或13整除，由于这种方法的基础是7×11×13=1001，所以我们将它为“**1001法**”。 
 
@@ -69,4 +58,20 @@
 
     这里要注意，因为1001=7×11×13，所以“1001法”不光能用来判断7的整除性，还可以用来判断11和13的整除性，由于104不能被11整除而能被13整除，所以我们可以判定841945不能被11整除而能被13整除。这是一个很有用的知识。 
 
-    利用“1001法”进行判断时，如果位数较多（数字较长），可以先将整数从右到左每三个数一节地分开，再从右边数起按下面办法计算（下式的证明要用到“同余式”的知识，此处从略）：**[第一节] – [第二节] + [第三节] - [第四节] +…**，计算所得的数如果是7，11或13的倍数，原数就能被7，11或13整除；如果算得的数不是7，11或13的倍数，则原数就不能被7，11或13整除。 
+### 2.7 三位截断法--被7、11、13整除的数
+
+- 利用“1001法”进行判断时，如果位数较多（数字较长），可以先将整数从右到左每三个数一节地分开，再从右边数起按下面办法计算（下式的证明要用到“同余式”的知识，此处从略）：**[第一节] – [第二节] + [第三节] - [第四节] +…**，计算所得的数如果是7，11或13的倍数，原数就能被7，11或13整除；如果算得的数不是7，11或13的倍数，则原数就不能被7，11或13整除。 
+
+  即“末三位数字组成的数”与“末三位以前的数字组成的数”之**差** 能被7、11或13整除。
+
+  举例：29‘071的末三位是071，前面是29，之差71-29=42，因为 7|42，所以 7|29071，同理，$\because 11\nmid42, \therefore 11\nmid 29071;\because 13\nmid42, \therefore 13\nmid 29071$
+
+
+## 三、小结
+
+4.1 尾数判定法: 适合于2、5；4、25；8、125   
+4.2 数字和判定法: 适合于3、9、99等   
+4.3 奇偶位求差法: 适合于11等   
+4.4 三位截断法: 适合于7、11、13    
+4.5 1001法: 适合于7、11、13   
+4.6 四步法，截尾-倍大-和或差-验和或差: 适合于7、11、13、17    
