--- a/middle/grade8/G8-锐角三角比练习题.md
+++ b/middle/grade8/G8-锐角三角比练习题.md
@@ -18,3 +18,11 @@
     $A.\; \tan A= \cot B \qquad B.\; \sin^2A+\cos^2A=1 \qquad C.\; \sin^2A+\sin^2B=1 \qquad D.\; \tan A\cdot \cot B=1$
 
 5. 已知 $\alpha, \beta$ 是直角三角形的两个锐角，$\alpha \ne \beta$, 且 $\alpha,\beta$ 满足 $3\tan\alpha-\tan^2\alpha=m, 3\tan\beta-\tan^2\beta=m$. 求：(1) $m$的值，(2) $\sqrt{\tan\alpha}+\sqrt{\tan\beta}$的值。
+
+6. 用几何方法求 15°角的三角比
+
+7. 用几何方法求 22.5°角的三角比
+
+8. 用几何方法求 18°角的三角比
+
+9. 
