update xes lesson1 一笔画

--- a/XES/三年级/暑假加油站解析/第1讲 多笔画.md
+++ b/XES/三年级/暑假加油站解析/第1讲 多笔画.md
@@ -50,4 +50,32 @@
     |奇点数|  |  |  |  |  |  |
     |最少笔画数|  |  |  |  |  |  |
 
-5. 
+5. 下图能否一笔画，如果不能，请添加最少的线段将图改成一笔画的图形。
+
+    ![L1-T5 PNG](image/第1讲T5.png)
+
+6. 湖中有 $A、B、C、D、E$ 五个小岛，有八座桥将五个小岛连接起来，现在艾迪想要从其中一个小岛出发，一次不重复地走完所有的桥，能不能实现？如果可以请你说说艾迪该从哪个岛出发？如果不可以，请你加上一座桥，帮艾迪实现想法。
+
+    ![L1-T6 PNG](image/第1讲T6.png)
+
+## 能力提升
+
+7. 图中是怪兽旅馆的平面图，它由四间房间组成，任意两展室之间都有门相通，请问能否一次不重复地穿过所有的门？利用多笔画理论知识说明。
+
+    ![L1-T7 PNG](image/第1讲T7.png)
+
+
+8. 如图所示，某小区花园的道路为一个长480米，宽200米的长方形，一个边长为260米的菱形和十字交叉的两条道路组成，一天，王大爷从A处进入花园，走遍花园的所有道路并从A处离开，那么，他从进入花园到走出花园最少要走_______米。
+
+    ![L1-T8 PNG](image/第1讲T8.png)
+
+
+9. 一辆清洁车清扫街道，每段街道长1千米，清洁车由A出发，走遍所有的街道再回到A，怎样走路程最短，全程多少千米？请给出一种清扫的路劲。
+
+    ![L1-T9 PNG](image/第1讲T9.png)
+
+## 创新挑战
+
+10. 下图是某小区的街道分布图，街道长度如图所示（单位：公里），图中各字母表示不同楼的代号，一名快递员从快递集中点（快递集中点位于C楼和D楼之间的P处）出发要走完所有街道后仍回到快递集中点，问怎样走路线最短？最短路线是多少公里？
+
+    ![L1-T10 PNG](image/第1讲T10.png)
