update L1-一笔画 for grade 3 math

--- a/XES/三年级/暑假加油站解析/第1讲 多笔画.md
+++ b/XES/三年级/暑假加油站解析/第1讲 多笔画.md
@@ -79,3 +79,96 @@
 10. 下图是某小区的街道分布图，街道长度如图所示（单位：公里），图中各字母表示不同楼的代号，一名快递员从快递集中点（快递集中点位于C楼和D楼之间的P处）出发要走完所有街道后仍回到快递集中点，问怎样走路线最短？最短路线是多少公里？
 
     ![L1-T10 PNG](image/第1讲T10.png)
+
+
+$\\[5em]$
+
+## 参考答案
+
+### 巩固题
+
+1. 请你填一填
+
+    ![L1-T1 PNG](image/第1讲T1图.png)
+
+    图（1）至少_____笔画成；共8个奇数点，8/2=4   
+    图（2）至少_____笔画成；共8个奇数点，8/2=4   
+    图（3）至少_____笔画成；共4个奇数点，4/2=2   
+    图（4）至少_____笔画成；共0个奇数点，1笔画   
+    图（5）至少_____笔画成；共0个奇数点，1笔画   
+    图（6）至少_____笔画成. 共0个奇数点，1笔画   
+    （填写阿拉伯数字）
+
+2. 下图是一个公园的道路平面图，要使游客走遍每条路且不重复，入口、出口分别应该设置在哪里？(  $C$  )
+
+    ![L1-T2 PNG](image/第1讲T2.png)  
+    两个奇数点E和D，一个进一个出，可以一笔画。  
+    $\;A.\;B入C出 \qquad B.\;I入E出 \qquad C.\; E入D出 \qquad D.\; I入D出$
+
+### 基础过关
+
+3. 下列图形中能不重复地一笔画出的有__3__个。
+
+    ![L1-T3 PNG](image/第1讲T3.png)
+    （第1幅图有0个奇数点,第2,4幅图有2个奇数点，都可以一笔画，第3,5幅图有4个奇数点，不能一笔画。）
+
+4. 请看图填写下表：
+
+    ![L1-T4 PNG](image/第1讲T4.png)
+
+    |图|①|②|③|④|⑤|⑥|
+    |---|---|---|---|---|---|---|
+    |奇点数|2  |2  |4  |4  |6  |8  |
+    |最少笔画数| 1 | 1 | 2 | 2 | 3 | 4 |
+
+5. 下图能否一笔画，如果不能，请添加最少的线段将图改成一笔画的图形。
+
+    ![L1-T5A PNG](image/第1讲T5A.png)
+
+    图中有8个奇数点，所以至少连接$(8-2)\div 2=3$ 条直线，可以将它变成一笔画。如连接 $FD, EC, HB$
+
+6. 湖中有 $A、B、C、D、E$ 五个小岛，有八座桥将五个小岛连接起来，现在艾迪想要从其中一个小岛出发，一次不重复地走完所有的桥，能不能实现？如果可以请你说说艾迪该从哪个岛出发？如果不可以，请你加上一座桥，帮艾迪实现想法。
+
+    ![L1-T6 PNG](image/第1讲T6.png)
+
+    转换为平面图如下：  
+    ![L1-T6A PNG](image/第1讲T6A.png)  
+    图中共有4个奇数点 $A,B,C,D$, 所以不能一笔画，可以选择在两个奇数点间架设一座桥，减少奇数点个数。  
+    可选择：$AB, AC, CD, DE, AB, AD, BC$ 中的任意一段中架设一座桥即可。
+
+### 能力提升
+
+7. 图中是怪兽旅馆的平面图，它由四间房间组成，任意两展室之间都有门相通，请问能否一次不重复地穿过所有的门？利用多笔画理论知识说明。
+
+    ![L1-T7 PNG](image/第1讲T7.png)
+
+    转化为点线图如下：  
+    ![L1-T7A PNG](image/第1讲T7A.png)
+
+    只有两个奇点 $T,C$, 所以能一次不重复穿过所有的门。
+
+8. 如图所示，某小区花园的道路为一个长480米，宽200米的长方形，一个边长为260米的菱形和十字交叉的两条道路组成，一天，王大爷从A处进入花园，走遍花园的所有道路并从A处离开，那么，他从进入花园到走出花园最少要走__3600__米。
+
+    ![L1-T8A PNG](image/第1讲T8A.png)
+
+    这是一个一笔画问题，图中有四个奇点，要想走遍所有的道路，至少需要重复走两条菱形的边，于是至少走
+    $(480+200)\times 3+260\times(4+2)=3600$ 米。
+
+9. 一辆清洁车清扫街道，每段街道长1千米，清洁车由A出发，走遍所有的街道再回到A，怎样走路程最短，全程多少千米？请给出一种清扫的路径。
+
+    ![L1-T9A PNG](image/第1讲T9A.png)
+
+    图中有8个奇点，清洁车从A点出发，走遍所有街道回到A点，也是转化为0个奇点的一笔画问题，那么连接最近的两个奇点即可，最短路径全程为 $3\times8+4=28$ 千米。   
+    A点是偶点，从A点出发，回到A点，则需要将所有奇数点化成偶数点，即在JK，BC，EF，OH之间各增加一条路径。  
+    清洁车的路径为：$A\to B\to C\to N\to P\to B\to C\to D\to E\to F\to M\to N\to E\to F\to G\to H\to O\to L\to M\to H\to O\to I\to J\to K\to P\to L\to J\to K\to A$
+    
+### 创新挑战
+
+10. 下图是某小区的街道分布图，街道长度如图所示（单位：公里），图中各字母表示不同楼的代号，一名快递员从快递集中点（快递集中点位于C楼和D楼之间的P处）出发要走完所有街道后仍回到快递集中点，问怎样走路线最短？最短路线是多少公里？
+
+    ![L1-T10A PNG](image/第1讲T10A.png)
+
+    要求最短路线，根据一笔画原理，一笔画路线就是最短路线，图中有6个奇点，需添加3条线，在实际问题中，快递员要在街道上重复走。   
+    最短路线为：$P\to D\to G\to D\to E\to F\to G\to H\to C\to B\to L\to M\to A\to B\to C\to P$
+
+    全程为：$(1+2+4+2)\times2+3\times5+2\times2+3=40$ 公里
