--- a/primary/grade5/exercise/分数乘除法练习题-3.md
+++ b/primary/grade5/exercise/分数乘除法练习题-3.md
@@ -17,6 +17,7 @@ $\dfrac{5}{4} × \dfrac{1}{8} ×\dfrac{1}{6}=\qquad \dfrac{1}{5} ＋ \dfrac{2}{9
 1. $\dfrac{3}{8} ＋\dfrac{3}{8} ＋\dfrac{3}{8} ＋\dfrac{3}{8} =（\qquad ）×（\qquad ）=（\qquad ）\\[1em]$
 2. 12个 $\dfrac{5}{6}$ 是$(\qquad)$；24的 $\dfrac{2}{3}$是 $(\qquad)$.
 3. $\dfrac{10}{13}$ 的3倍是$(\qquad)$；$(\qquad)$和 $\dfrac{1}{4}$ 的积是12.
+
 4. $\dfrac{1}{2} ×（\qquad ）= \dfrac{3}{5} ×（\qquad ）=0.5×（\qquad ）$
 5. 在$\bigcirc$里填上＞、＜或=  
     $\dfrac{5}{6} ×4 \bigcirc \dfrac{5}{6} \qquad 9×\dfrac{2}{3} \bigcirc \dfrac{2}{3} ×9 \qquad \dfrac{3}{8} × \dfrac{1}{2} \bigcirc \dfrac{3}{8}\\[1em]$
@@ -28,15 +29,17 @@ $\dfrac{5}{4} × \dfrac{1}{8} ×\dfrac{1}{6}=\qquad \dfrac{1}{5} ＋ \dfrac{2}{9
 
 ## 三、选择题
 
-1. “小羊只数是大羊只数的 $\dfrac{3}{8}$”,（ ）是单位“1”.  
+1. “小羊只数是大羊只数的 $\dfrac{3}{8}$”, （ ）是单位“1”.  
     $A、小羊 \qquad B、大羊 \qquad C、无法确定$
 2. （ ）一定大于1.  
     $A、真分数 \qquad B、假分数 \qquad C、任何数$
-3. 今年的产量比去年多$\dfrac{1}{10}$,今年的产量就相当于去年的（ ）.
+3. 今年的产量比去年多$\dfrac{1}{10}$, 今年的产量就相当于去年的（ ）.
+
     $A、\dfrac{1}{10} \qquad B、\dfrac{9}{10} \qquad C、\dfrac{11}{10}$
-4. $12×(\dfrac{1}{4} ＋ \dfrac{1}{3}）=3＋4=7$,这是根据（ ）计算的.
+
+4. $12×(\dfrac{1}{4} ＋ \dfrac{1}{3}）=3＋4=7$, 这是根据（ ）计算的.
     $A、乘法交换律 \qquad B、乘法分配律 \qquad C、乘法结合律$
-5. 一块长方形菜地,长20米,宽是长的$\dfrac{3}{4}$ ,求面积的算式是（ ）.  
+5. 一块长方形菜地, 长20米, 宽是长的$\dfrac{3}{4}$, 求面积的算式是（ ）.  
     $A、20×\dfrac{3}{4} \qquad B、20×\dfrac{3}{4}＋20\qquad C、20×(20×\dfrac{3}{4})$
 6. 比35的 $\dfrac{2}{7}$ 多9的数是（ ）.  
     $A、19\qquad B、14\qquad C、1$
@@ -44,25 +47,25 @@ $\dfrac{5}{4} × \dfrac{1}{8} ×\dfrac{1}{6}=\qquad \dfrac{1}{5} ＋ \dfrac{2}{9
 ## 四、判断题（打√或×）
 
 1. 1吨的 $\dfrac{4}{5}$ 和4吨的 $\dfrac{1}{5}$ 一样重. （ ）
-2. 一根电线长3米,用去 $\dfrac{2}{5}$ 米后,还剩下 $\dfrac{3}{5}$ 米. （ ）
+2. 一根电线长3米, 用去 $\dfrac{2}{5}$ 米后, 还剩下 $\dfrac{3}{5}$ 米. （ ）
 3. 60的 $\dfrac{2}{5}$ 相当于80的 $\dfrac{3}{10}$ . （ ）
-4. 冰箱的数量相当于电视机的 $\dfrac{7}{8}$ ,冰箱的数量比电视机少$\dfrac{1}{8}$ .（ ）
+4. 冰箱的数量相当于电视机的 $\dfrac{7}{8}$ , 冰箱的数量比电视机少$\dfrac{1}{8}$ .（ ）
 
 ## 五、应用题
 
-1. 甲乙两地相距420千米,一辆汽车行驶了全程的 $\dfrac{5}{7}$ ,行驶了多少千米?$\\[5em]$
+1. 甲乙两地相距420千米,一辆汽车行驶了全程的 $\dfrac{5}{7}$ , 行驶了多少千米?$\\[5em]$
 
 
 
 
 
-2. 一个果园占地20公顷,其中的 $\dfrac{2}{5}$ 种苹果树, $\dfrac{1}{4}$ 种梨树,苹果树和梨树各种了多少公顷?$\\[5em]$
+2. 一个果园占地20公顷,其中的 $\dfrac{2}{5}$ 种苹果树, $\dfrac{1}{4}$ 种梨树, 苹果树和梨树各种了多少公顷?$\\[5em]$
 
 
 
 
 
-3. 某鞋店进来皮鞋600双.第一周卖出总数的 $\dfrac{1}{5}$ ,第二周卖出总数的 $\dfrac{3}{8}$ .  
+3. 某鞋店进来皮鞋600双. 第一周卖出总数的 $\dfrac{1}{5}$ , 第二周卖出总数的 $\dfrac{3}{8}$。   
 ⑴两周一共卖出总数的几分之几?   
 ⑵两周一共卖出多少双?   
 ⑶还剩多少双?$\\[9em]$
@@ -75,20 +78,20 @@ $\dfrac{5}{4} × \dfrac{1}{8} ×\dfrac{1}{6}=\qquad \dfrac{1}{5} ＋ \dfrac{2}{9
 
 
 
-4. 六年级同学给灾区的小朋友捐款.六一班捐了500元,六二班捐的是六一
-的$\dfrac{4}{5}$ ,六三班捐的是六二班的 $\dfrac{9}{8}$ .六三班捐款多少元?$\\[5em]$
+4. 六年级同学给灾区的小朋友捐款. 六一班捐了500元, 六二班捐的是六一
+的$\dfrac{4}{5}$ , 六三班捐的是六二班的 $\dfrac{9}{8}$ 。六三班捐款多少元?$\\[5em]$
 
 
 
 
 
-5. 一件西服原价180元,现在的价格比原来降低了$\dfrac{1}{5}$ ,现在的价格是多少元?$\\[5em]$
+5. 一件西服原价180元,现在的价格比原来降低了$\dfrac{1}{5}$ , 现在的价格是多少元?$\\[5em]$
 
 
 
 
 
-6、希望小学三年级有学生216人,四年级的人数比三年级多 $\dfrac{2}{9}$ ,四年级有学多少人?$\\[5em]$
+6. 希望小学三年级有学生216人,四年级的人数比三年级多 $\dfrac{2}{9}$ , 四年级有学多少人?$\\[5em]$
 
 
 
@@ -97,4 +100,4 @@ $\dfrac{5}{4} × \dfrac{1}{8} ×\dfrac{1}{6}=\qquad \dfrac{1}{5} ＋ \dfrac{2}{9
 
 ## 六、智慧题
 
-甲乙两个仓库,甲仓存粮30吨,如果从甲仓中取出$\dfrac{1}{10}$ 放入乙仓,则两仓存粮数相等.两仓一共存粮多少千克?
+甲乙两个仓库, 甲仓存粮30吨, 如果从甲仓中取出$\dfrac{1}{10}$ 放入乙仓, 则两仓存粮数相等。两仓一共存粮多少千克?
