--- a/primary/grade5/exercise/分数乘除法练习题-3.md
+++ b/primary/grade5/exercise/分数乘除法练习题-3.md
@@ -9,8 +9,8 @@ $9×\dfrac{7}{18} =\qquad \dfrac{2}{3} × \dfrac{9}{10} =\qquad \dfrac{4}{25} ×
 
 ### 2、能简算的要简算
 
-$\dfrac{1}{7}× \dfrac{9}{16}=\qquad (\dfrac{3}{4}＋\dfrac{5}{8})×\dfrac{3}{2}=\qquad \dfrac{5}{9} × \dfrac{3}{4}＋\dfrac{5}{9} × \dfrac{1}{4}=\\[1em]$
-$\dfrac{5}{4} × \dfrac{1}{8} ×\dfrac{1}{6}=\qquad \dfrac{1}{5} ＋ \dfrac{2}{9} × \dfrac{3}{10}=\qquad 44－\dfrac{7}{2}×\dfrac{5}{12}=\qquad$
+$\dfrac{4}{7}× \dfrac{14}{16}=\qquad \qquad(\dfrac{3}{4}＋\dfrac{5}{8})×\dfrac{3}{2}=\qquad \qquad\dfrac{5}{9} × \dfrac{3}{4}＋\dfrac{5}{9} × \dfrac{1}{4}=\\[1em]$
+$\dfrac{5}{4} × \dfrac{1}{10} ×\dfrac{1}{6}=\qquad \qquad\dfrac{1}{5} ＋ \dfrac{2}{9} × \dfrac{3}{10}=\qquad \qquad 4\dfrac{4}{7}－\dfrac{7}{10}×\dfrac{5}{14}=\qquad$
 
 ## 二、填空题
 
@@ -31,9 +31,9 @@ $\dfrac{5}{4} × \dfrac{1}{8} ×\dfrac{1}{6}=\qquad \dfrac{1}{5} ＋ \dfrac{2}{9
 
 1. “小羊只数是大羊只数的 $\dfrac{3}{8}$”, （ ）是单位“1”.  
     $A、小羊 \qquad B、大羊 \qquad C、无法确定$
-2. （ ）一定大于1.  
+2. （ ）一定小于1.  
     $A、真分数 \qquad B、假分数 \qquad C、任何数$
-3. 今年的产量比去年多$\dfrac{1}{10}$, 今年的产量就相当于去年的（ ）.
+3. **今年的产量比去年多$\dfrac{1}{10}$, 今年的产量就相当于去年的（ ）.
 
     $A、\dfrac{1}{10} \qquad B、\dfrac{9}{10} \qquad C、\dfrac{11}{10}$
 
@@ -49,7 +49,7 @@ $\dfrac{5}{4} × \dfrac{1}{8} ×\dfrac{1}{6}=\qquad \dfrac{1}{5} ＋ \dfrac{2}{9
 1. 1吨的 $\dfrac{4}{5}$ 和4吨的 $\dfrac{1}{5}$ 一样重. （ ）
 2. 一根电线长3米, 用去 $\dfrac{2}{5}$ 米后, 还剩下 $\dfrac{3}{5}$ 米. （ ）
 3. 60的 $\dfrac{2}{5}$ 相当于80的 $\dfrac{3}{10}$ . （ ）
-4. 冰箱的数量相当于电视机的 $\dfrac{7}{8}$ , 冰箱的数量比电视机少$\dfrac{1}{8}$ .（ ）
+4. ***冰箱的数量相当于电视机的 $\dfrac{7}{8}$ , 冰箱的数量比电视机少$\dfrac{1}{8}$ .（ ）
 
 ## 五、应用题
 
@@ -91,7 +91,7 @@ $\dfrac{5}{4} × \dfrac{1}{8} ×\dfrac{1}{6}=\qquad \dfrac{1}{5} ＋ \dfrac{2}{9
 
 
 
-6. 希望小学三年级有学生216人,四年级的人数比三年级多 $\dfrac{2}{9}$ , 四年级有学多少人?$\\[5em]$
+6. 希望小学三年级有学生216人,四年级的人数比三年级多 $\dfrac{2}{9}$ , 四年级有学生多少人?$\\[5em]$
 
 
 
