--- a/primary/grade5/exercise/分数乘除法练习题-4.md
+++ b/primary/grade5/exercise/分数乘除法练习题-4.md
@@ -2,21 +2,13 @@
 
 ## 一、填空题
 
-（1）$\dfrac{3}{4}$时是（ ）分      
+（1）$\dfrac{3}{4}$时是$（ \qquad\qquad）$分    $\qquad$  （2）$\dfrac{3}{4}$米是$（ \qquad\qquad）$分米  
 
-（2）$\dfrac{3}{4}$米是（ ）分米  
+（3）$\dfrac{3}{4}$平方米是$（ \qquad\qquad）$平方分米   $\qquad$（4）$\dfrac{3}{4}$立方米是$（ \qquad\qquad）$立方分米  
 
-（3）$\dfrac{3}{4}$平方米是（ ）平方分米   
+（5）$\dfrac{3}{4}$吨是$（ \qquad\qquad）$千克     $\qquad$ （6）周角的$\dfrac{2}{3}$是$（ \qquad\qquad）$度  
 
-（4）$\dfrac{3}{4}$立方米是（ ）立方分米  
-
-（5）$\dfrac{3}{4}$吨是（ ）千克           
-
-（6）周角的$\dfrac{2}{3}$是（ ）度  
-
-（7）平角的$\dfrac{2}{3}$是（ ）度        
-
-（8）直角的$\dfrac{2}{3}$是（ ）度
+（7）平角的$\dfrac{2}{3}$是$（ \qquad\qquad）$度    $\qquad$（8）直角的$\dfrac{2}{3}$是$（ \qquad\qquad）$度
 
 ## 二、简答题
 
@@ -34,7 +26,7 @@
 
 2. 甲地到乙地 150千米，一辆汽车从甲地出发，走了全程的$\dfrac{4}{5}$，它离乙地还有多少千米？$\\[5em]$
 
-3. 甲地到乙地150千米，一辆汽车从甲地出发，走了(这里删掉全程的）$\dfrac{4}{5}$千米，它离乙地还有多少千米？$\\[5em]$
+3. 甲地到乙地150千米，一辆汽车从甲地出发，走了$\dfrac{4}{5}$千米，它离乙地还有多少千米？$\\[5em]$
 
 ## 四、植树问题
 
@@ -64,4 +56,5 @@
 
 ## 八、提高题
 
-一个梯形，上底是10厘米，下底是上底的$\dfrac{3}{2}$，高比上底短$\dfrac{1}{2}$，这个梯形的面积是多少平方厘米？
+一个梯形，上底是10厘米，下底是上底的$\dfrac{3}{2}$，高比上底短$\dfrac{1}{2}$，这个梯形的面积是多少平方厘米？  
+提示：梯形面积公式=$\dfrac{1}{2}(上底+下底)\times 高$
