--- a/XES/九年级/exercise/三角比练习题-1.md
+++ b/XES/九年级/exercise/三角比练习题-1.md
@@ -67,7 +67,7 @@
     (2) 如果2为最大值，设钝角为 $\beta, \cos \beta=\dfrac{x^2+3-4}{2x\sqrt{3}}, 且 -1<\cos\beta<0, x>0,$ 解得：    
     $(i) 0<x<1, (ii) x>2-\sqrt{3}$, 合并(i) (ii)为 $2-\sqrt{3}<x<1$ 
 
-    综上所述，$x$ 的取值范围为 $2<\sqrt{7}<x<2+\sqrt{3}$ 或 $2-\sqrt{3}<x<1$
+    综上所述，$x$ 的取值范围为 $\sqrt{7}<x<2+\sqrt{3}$ 或 $2-\sqrt{3}<x<1$
 
 11. 如图，若 $AB=6, BC=8, BD=4, \sin B:\sin C=2:3, S_{\triangle{BDE}}:S_{\triangle{ABC}}=1:6$, 求 $DE$
 
@@ -86,6 +86,8 @@
     (2) $\cos C=\dfrac{a^2+b^2-c^2}{2ab}=\dfrac{\sqrt{2}}{2}, \therefore \angle C=45\degree$   
     (3) $\therefore \angle B=180\degree-\angle A-\angle C=105\degree$    
     综上所述，$\angle A,\angle B, \angle C$ 分别为 $30\degree, 105\degree,45\degree$
+
+    Note: 能用余弦定理，就不要用正弦定理。正弦定理产生多个值（因为 $\sin(180\degree-\alpha)=\sin\alpha$），需要讨论。
 
 13. 三角形$ABC$中, 设$AD$是高，$BE$ 是角平分线，若 $BC=6, CA=7, AB=8,$ 则 $DE=$_________
 
