--- a/XES/九年级/exercise/二次根式错题集（汪瑞雯）.md
+++ b/XES/九年级/exercise/二次根式错题集（汪瑞雯）.md
@@ -1,14 +1,14 @@
 # 二次根式错题集（汪瑞雯）
 
 二次根式（quadratic radical）   
-一般地，形如$\sqrt{a}$的代数式叫做二次根式，其中，$a$ 叫做被开方数。
+一般地，形如$\underline{\sqrt{a}, a\ge 0}$的代数式叫做二次根式，其中，$a$ 叫做被开方数。
 
-当$a≥0$时，$\sqrt{a}$表示$a$的算术平方根；
+(1) 当$a≥0$时，$\sqrt{a}$表示$a$的算术平方根，初中阶段被开方数$a$必须为非负数,二次根式的结果也是非负数， 即$\sqrt{a}\ge 0$；
 
-当$a<0$时，$\sqrt{a}$的值为纯虚数（在一元二次方程求根公式中，若根号下为负数，则方程有两个共轭虚根）。
+(2) 当$a<0$时，$\sqrt{a}$的值为纯虚数（在一元二次方程求根公式中，若根号下为负数，则方程有两个共轭虚根）。
 
-判断一个二次根式是否为最简二次根式主要方法是:   
-根据最简二次根式的定义进行，或直观地观察被开方数的每一个因数（或因式）的指数都小于根指数2，且被开方数中不含有分母，被开方数是多项式时要先因式分解后再观察。
+判断一个二次根式是否为**最简二次根式**主要方法是:   
+根据最简二次根式的定义进行，或直观地观察被开方数的每一个因数（或因式）的指数都小于根指数2，且被开方数中不含有分母和分数（小数），被开方数是多项式时要先因式分解后再观察。
 
 
 ## 第十六章 二次根式（新思路练习题）
@@ -53,8 +53,8 @@
 
 ## 最简二次根式
 
-最简二次根式条件：   
-- 被开方数的因数是整数或字母，因式是整式；
+最简二次根式条件（两个不含）：   
+- 被开方数的因数是整数或字母，因式是整式，即被开方数不含分母（分式、分数或小数）；
 - 被开方数中不含有可化为平方数或平方式的因数或因式。
 
 二次根式化简一般步骤：    
@@ -64,6 +64,13 @@
 - 化去根号内的分母，或化去分母中的根号；
 - 约分。
 
+二次根式化简时，需要用到如下公式：    
+(1) $\sqrt{a^2}=|a|=$   
+(2) $(\sqrt{a})^2=a, \; a \ge 0$    
+(3) $\sqrt{ab}=\sqrt{a}\sqrt{b}, \; a\ge 0, b\ge 0， 或者 =\sqrt{-a}\sqrt{-b}, \; a\le 0,b\le 0$    
+(4) $\sqrt{\dfrac{a}{b}}=\dfrac{\sqrt{a}}{\sqrt{b}}, a\ge0, b>0, 或者 =\dfrac{\sqrt{-a}}{\sqrt{-b}}, \; a\le 0,b< 0$
+
+
 1. 当正整数 $n=$______时，$\sqrt{a^{n-2}}$ 是最简二次根式。[n=3]
 2. 在根式 $\sqrt{5x^5},\sqrt{\dfrac{ab}{3}}, \sqrt{11y},\sqrt{16x^2-9},\sqrt{12a}, \dfrac{\sqrt{2x}}{2},\sqrt{x^3-x^2}, \sqrt{0.23}$中，最简二次根式的个数是$(\underline{\qquad})$
 
@@ -71,26 +78,30 @@
 
     解析：选择 $C. 3$
 3.  化为最简二次根式 $\dfrac{a}{a^2-1}\sqrt{\dfrac{(a-1)^2}{a^4}},\; (0<a<1)$
-    $\\[7em]$
+    
+    解析：原式=$\dfrac{a}{(a-1)(a+1)}\times\dfrac{|a-1|}{a^2}=\dfrac{1-a}{a(a-1)(a+1)}=-\dfrac{1}{a(a+1)}$
 
 4.  拓展题，化简 $\sqrt{1+\dfrac{1}{n^2}+\dfrac{1}{(n+1)^2}}, \quad(n为正整数)$
-    $\\[7em]$
+    
+    解析：原式=$\sqrt{\left(\dfrac{1}{n}-\dfrac{1}{n+1}\right)^2+2\left(\dfrac{1}{n}-\dfrac{1}{n+1}\right)+1}=\sqrt{\left(\dfrac{1}{n}-\dfrac{1}{n+1}+1\right)^2}=\dfrac{n^2+n+1}{n^2+n}$
 
 ## 同类二次根式
 
-一般地，把几个二次根式化为最简二次根式后，如果它们的被开方数相同，笼统的说，就是根号内的数相同，就把这几个二次根式叫做同类二次根式。
+    一般地，把几个二次根式化为最简二次根式后，如果它们的被开方数相同，笼统的说，就是根号内的**代数式**相同，就把这几个二次根式叫做同类二次根式。    
+    与根号外的因式无关。
 
 **合并同类二次根式**
 
-把几个同类二次根式合并为一个二次根式就叫做合并同类二次根式。
+    把几个同类二次根式合并为一个二次根式就叫做合并同类二次根式。
 
-二次根式加减时，可以先将二次根式化为最简二次根式，再将被开方数相同的进行合并。
+    二次根式加减时，可以先将二次根式化为最简二次根式，再将被开方数相同的进行合并。
 
 12. 合并同类二次根式：$6\sqrt{xy}-2\sqrt{xy^3}+5\sqrt{x^3y},\;(x\le 0)$
     $\\[7em]$
 
 13. 拓展题，已知实数 $a$ 满足 $|1-a|-|a|=1,$ 化简 $\sqrt{(a-1)^2}+\sqrt{a^2}$
-    $\\[7em]$
+    
+    解析：$分类讨论a的取值范围，\\[7em]$
 14. 拓展题，当 $x$ 取哪个最小正整数时，$\sqrt{2x+5}与 \sqrt{3}$ 是同类二次根式？
     $\\[7em]$
 
@@ -104,6 +115,8 @@
     $\\[7em]$
 
 ## 二次根式的加减法
+
+**三步骤：先化简（最简二次根式），再判断（是否同类二次根式），最后合并（同类二次根式）。**
 
 18. 计算 $\sqrt{81a^3}-5a\sqrt{a}+\dfrac{3}{a}\sqrt{4a^5}$
     $\\[7em]$
@@ -153,7 +166,13 @@
     
 30. 拓展题 求比$(\sqrt{6}+\sqrt{5})^6$ 大的最小整数。
 
-    $\\[7em]$
+    解析：设$a=\sqrt{6}+\sqrt{5}, b=\sqrt{6}-\sqrt{5}$, 则 $a+b=2\sqrt{6}, ab=1$, 于是有：     
+    $a^2+b^2=(a+b)^2-2ab=24-2=22$   
+    $a^3+b^3=(a+b)（a^2-ab+b^2)=2\sqrt{6}(22-1)=42\sqrt{6}$   
+    $a^6+b^6=(a^3+b^3)^2-2a^3b^3=42^2\times 6-2=10582$   
+    $\because 0<b<1, \therefore 0<b^6<1, -1<-b^6<0$      
+    $\therefore 10581<a^6<10582$   
+    即 $a^6$的整数部分是10581，比它大的最小整数是10582.
 
 ## 二次根式分母有理化
 
@@ -190,3 +209,16 @@
 38. 不等式 $\sqrt{5}x-6<3\sqrt{5}x$的解集为__________
 
 39. 已知 $\triangle ABC$ 的一条边为$b$, 这条边上的高为 $\sqrt{2}a, S_{\triangle {ABC}}=\dfrac{\sqrt{3}}{3}a,$ 则 $b=$__________
+
+40. 拓展 计算 $\dfrac{1}{3+\sqrt{3}}+\dfrac{1}{5\sqrt{3}+3\sqrt{5}}+\dfrac{1}{7\sqrt{5}+5\sqrt{7}}+\cdots+\dfrac{1}{49\sqrt{47}+47\sqrt{49}}$
+
+    解析：先观察单项的规律，发现单项满足：    
+    $\dfrac{1}{(a+2)\sqrt{a}+a\sqrt{a+2}}$     
+    化简单项，分母有理化为：    
+    $\dfrac{1}{2}\left(\dfrac{\sqrt{a}}{a}-\dfrac{\sqrt{a+2}}{a+2}\right)=\dfrac{1}{2}\left(\dfrac{1}{\sqrt{a}}-\dfrac{1}{\sqrt{a+2}}\right)$    
+    令 $a=1,3,5,7,\cdots,47$, 上述各式相加，错位相减得到：     
+    原式=$\dfrac{1}{2}(1-\dfrac{1}{7})=\dfrac{3}{7}$
+
+41. 已知$a$为实数，求代数式 $\sqrt{a+2}-\sqrt{8-4a}+\sqrt{-a^2}$的值。
+42. 计算 $(\sqrt{1-x})^2-\sqrt{x^2-4x+4}$
+43. 化简 $(\sqrt{-x})^2-\sqrt{x^2}=$_________
