--- a/primary/grade5/exercise/一课一练 第二章 分数-1.md
+++ b/primary/grade5/exercise/一课一练 第二章 分数-1.md
@@ -25,7 +25,7 @@
 
 6. 将一筐15kg的苹果平均分成4份，每份重____kg, 每份是这15kg的______(填几分之几)
 7. 17分钟=________小时（用分数表示）
-8. 已知小杰作12道习题用去19分钟，那么他平均_____分钟可以完成1道题。
+8. 已知小杰作12道习题用去19分钟，那么他平均_____分钟可以完成1道题，每分钟做了_____道题。
     
 ### 三、解答题
 
