--- a/primary/grade5/exercise/分数除法经典应用题-3.md
+++ b/primary/grade5/exercise/分数除法经典应用题-3.md
@@ -1,30 +1,30 @@
 # 分数除法经典应用题-3
 
-1. 学校图书馆里，文艺书占1/3，科技书占1/5，已知科技书和文艺书共960本，这个图书馆共有图书多少本？
+1. 学校图书馆里，文艺书占$\dfrac{1}{3}$，科技书占 $\dfrac{1}{5}$，已知科技书和文艺书共960本，这个图书馆共有图书多少本？
 $\\[9em]$
 
-2. 一根铁丝，第一天用去全长的1/6，第二天用去全长的1/3，第一天比第二天用去的短30米，这根电线长多少米？
+2. 一根铁丝，第一天用去全长的 $\dfrac{1}{6}$，第二天用去全长的 $\dfrac{1}{3}$，第一天比第二天用去的短30米，这根电线长多少米？
 $\\[9em]$
 
-3. 一辆汽车从甲地开往乙地，已经行了84千米,余下的占全长的3/7，甲乙两地相距多少米？
+3. 一辆汽车从甲地开往乙地，已经行了84千米, 余下的占全长的 $\dfrac{3}{7}$，甲乙两地相距多少米？
 $\\[9em]$
 
-4. 一根铁丝，第一天用去全长的1/6，第二天用去全长的1/3，还剩30米，这根铁丝长多少米？
+4. 一根铁丝，第一天用去全长的 $\dfrac{1}{6}$，第二天用去全长的 $\dfrac{1}{3}$，还剩30米，这根铁丝长多少米？
 $\\[9em]$
 
-5. 一辆汽车从甲地开往乙地先行全程的1/8，然后又行400千米正好到达，甲乙两地相距多少千米？
+5. 一辆汽车从甲地开往乙地先行全程的 $\dfrac{1}{8}$，然后又行400千米正好到达，甲乙两地相距多少千米？
 $\\[9em]$
 
-6. 一堆煤，第一次运出1/3，第二次运出120吨，第三次运出这堆煤的1/4正好运完，这堆煤共有多少吨？
+6. 一堆煤，第一次运出 $\dfrac{1}{3}$，第二次运出120吨，第三次运出这堆煤的 $\dfrac{1}{4}$ 正好运完，这堆煤共有多少吨？
 $\\[9em]$
 
-7. 小王师傅加工一批零件，已经完成1/3，再做16个就可以完成总数的2/5，这批零件共有多少个？
+7. 小王师傅加工一批零件，已经完成 $\dfrac{1}{3}$，再做16个就可以完成总数的 $\dfrac{2}{5}$，这批零件共有多少个？
 $\\[9em]$
 
-8. 加工一批零件，上午完成4/7,下午又做了20个,还差1/7没有完成.这批零件一共多少个？
+8. 加工一批零件，上午完成 $\dfrac{4}{7}$, 下午又做了20个, 还差 $\dfrac{1}{7}$ 没有完成.这批零件一共多少个？
 $\\[9em]$
 
-9. 从东城到西城，走了全程的3/8，离全程的中点还有16千米，东西两城相距多少千米？
+9. 从东城到西城，走了全程的 $\dfrac{3}{8}$，离全程的中点还有16千米，东西两城相距多少千米？
 $\\[9em]$
 
-10. 一辆汽车从甲地开往乙地，已经行了28千米。再行全程的1/3就正好到达中点，甲乙两地相距多少千米？
+10. 一辆汽车从甲地开往乙地，已经行了28千米。再行全程的 $\dfrac{1}{3}$ 就正好到达终点，甲乙两地相距多少千米？
