--- a/primary/grade5/exercise/分数除法经典应用题-4.md
+++ b/primary/grade5/exercise/分数除法经典应用题-4.md
@@ -1,30 +1,30 @@
 # 分数除法经典应用题-4
 
-11. 学校有一堆煤，第一天用去4吨，占总数的1/18，第二天用去总数的1/9，第二天用去多少吨？
-$\\[5em]$
+11. 学校有一堆煤，第一天用去4吨，占总数的$\dfrac{1}{18}$，第二天用去总数的$\dfrac{1}{9}$，第二天用去多少吨？
+$\\[8em]$
 
-12. 甲乙两队合修一条公路，甲队修了24千米，占公路长的3/8,乙队修的长度占公路长的5/16，乙队修了多少千米？
-$\\[5em]$
+12. 甲乙两队合修一条公路，甲队修了24千米，占公路长的$\dfrac{3}{8}$,乙队修的长度占公路长的 $\dfrac{5}{16}$，乙队修了多少千米？
+$\\[8em]$
 
-13. 一辆汽车从甲地开往乙地，先走48千米的上坡路，占全程的1/4，接着走的下坡路占全程的1/6，下坡路长多少千米？
-$\\[5em]$
+13. 一辆汽车从甲地开往乙地，先走48千米的上坡路，占全程的$\dfrac{1}{4}$，接着走的下坡路占全程的 $\dfrac{1}{6}$，下坡路长多少千米？
+$\\[8em]$
 
-14. 在一周内甲做数学题36道，等于乙做的3/4，乙做的题数等于丙做的8/7，丙做了多少道题？
-$\\[5em]$
+14. 在一周内甲做数学题36道，等于乙做的 $\dfrac{3}{4}$，乙做的题数等于丙做的 $\dfrac{8}{7}$，丙做了多少道题？
+$\\[8em]$
 
-15. 体育官买来一些球，买足球20个，篮球是足球的3/4，同时又是排球的3/5，买来排球多少个？
-$\\[5em]$
+15. 体育官买来一些球，买足球20个，篮球是足球的$\dfrac{3}{4}$，同时又是排球的$\dfrac{3}{5}$，买来排球多少个？
+$\\[8em]$
 
-16. 一堆煤的4/9是60吨，如果运走这堆煤的4/5，还剩下多少吨？
-$\\[5em]$
+16. 一堆煤的$\dfrac{4}{9}$是60吨，如果运走这堆煤的$\dfrac{4}{5}$，还剩下多少吨？
+$\\[8em]$
 
-17. 一段钢筋用去9.6米，还剩下全长的2/5，要想剩全长的3/5，得用去多少米
-$\\[5em]$
+17. 一段钢筋用去9.6米，还剩下全长的$\dfrac{2}{5}$，要想剩全长的$\dfrac{3}{5}$，得用去多少米？
+$\\[8em]$
 
-18. 学校买回红粉笔比白粉笔少160箱，红粉笔是白粉笔的1/7，有白粉笔多少箱？
-$\\[5em]$
+18. 学校买回红粉笔比白粉笔少160箱，红粉笔是白粉笔的$\dfrac{1}{7}$，有白粉笔多少箱？
+$\\[8em]$
 
-19. 某校六年级有学生260人，男生是女生的6/7，有男生多少人？
-$\\[5em]$
+19. 某校六年级有学生260人，男生是女生的$\dfrac{6}{7}$，有男生多少人？
+$\\[8em]$
 
-20. 被减数是180,减数是差的2/7,差是多少?
+20. 被减数是180,减数是差的$\dfrac{2}{7}$,差是多少?
