--- a/primary/grade5/exercise/暑假作业（四年级数学）.md
+++ b/primary/grade5/exercise/暑假作业（四年级数学）.md
@@ -24,17 +24,28 @@
    $(4-2\div2)\times8, (2+4)\div2\times8,(8\div2+2)\times4,2\times2\times4+8$
 5. 如果把下面各数的末尾添上“0”，哪些数的大小不变（右框中）？哪些数的大小变化（左框中）？把它们分别放入各自的框中。Page27  
    $2.3\quad 54 \quad 0.07 \quad 600 \quad 5.0 \quad 905 \quad 30.008 \quad 210 \quad 10.01 \quad 36.00$  
-   ![大小变化](大小变化.png)
+   ![大小变化](大小变化.png#=60x30)
 
 6. 我是一个两位数，个位上的数字与十位上的数字乘积与它们的和相等，猜猜我是谁？   
    答：是_________
 7. 机械厂要加工2400个零件，计划每天加工75个。改进技术后，实际工作效率提高到原来的2倍。加工完这批零件实际提前了多少天？Page30    
 8. 把下面的图形分成大小相等，形状相同的6块，如何划分？Page30
 
-    ![分割成6块](分割成6块.png)
+    ![分割成6块](分割成6块.png#pic_center=60x50)
 
 9. 巧拼台布   
    有两块正方形台布，边长都是1m，小明家买了一张边长为1.3m的正方形桌子，两块台布都不合适，丢掉又太可惜了，你能替小明想办法，把两块台布拼成一块大台布（布料没有剩余）吗？
 
 
-10. 
+10. 下图中有10个苹果，请你画三个圆圈，将这些苹果一一分隔开。
+
+
+11. 算面积
+
+    ![计算面积](算面积.png#pic_center=60x60)
+
+12. 划分等边三角形为8个完全相等的直角三角形
+
+    ![分割三角形](分割等边三角形为8个直角三角形.png#pic_center=60x60)
+
+13. 
