--- a/primary/grade5/exercise/分数乘法经典应用题-2.md
+++ b/primary/grade5/exercise/分数乘法经典应用题-2.md
@@ -1,36 +1,36 @@
 # 分数乘法经典应用题-2
 
-12. 有25吨大米，第一天卖出1/4吨，第一天卖出余下的1/4，第二天卖出大米多少吨？
+12. 有25吨大米，第一天卖出$\dfrac{1}{4}$吨，第二天卖出余下的$\dfrac{1}{4}$，第二天卖出大米多少吨？
 $\\[8em]$
 
-13. 粮店有4000千克大米，第一周卖出1/2吨，第二周卖出余下的3/5，第二天卖出大米多少千克？
+13. 粮店有4000千克大米，第一周卖出$\dfrac{1}{2}$吨，第二周卖出余下的$\dfrac{3}{5}$，第二天卖出大米多少千克？
 $\\[8em]$
 
-14. 有一堆煤60吨，用去它的1/4还多5吨，用去多少吨？
+14. 有一堆煤60吨，用去它的$\dfrac{1}{4}$还多5吨，用去多少吨煤？
 $\\[8em]$
 
-15. 有苹果2600千克，梨比苹果的7/13还少100千克，梨有多少千克？
+15. 有苹果2600千克，梨比苹果的$\dfrac{7}{13}$还少100千克，梨有多少千克？
 $\\[8em]$
 
-16. 工厂有女工234人，男工比女工的2/3还少32人，工厂有男工多少人？
+16. 工厂有女工234人，男工比女工的$\dfrac{2}{3}$还少32人，工厂有男工多少人？
 $\\[8em]$
 
-17. 要修一条公路，第一天修3/10千米，第二天修2/5千米，第三天修的恰好是前两天的5/6，三天一共修多少千米？
+17. 要修一条公路，第一天修$\dfrac{3}{10}$千米，第二天修$\dfrac{2}{5}$千米，第三天修的恰好是前两天的$\dfrac{5}{6}$，三天一共修多少千米？
 $\\[8em]$
 
-18. 洗衣机厂上月计划生产洗衣机1500台，结果超产1/15，超产了多少台？
+18. 洗衣机厂上月计划生产洗衣机1500台，结果超产$\dfrac{1}{15}$，超产了多少台？
 $\\[8em]$
 
-19. 水果店有橘子2600千克，苹果比橘子少9/20，苹果比橘子少多少千克？
+19. 水果店有橘子2600千克，苹果比橘子少$\dfrac{9}{20}$，苹果比橘子少多少千克？
 $\\[8em]$
 
-20. 学校九月份用煤560千克，十月份计划用煤是九月份的9/10而十月份实际用煤比计划节约了1/12，十月份比计划节约用煤多少？
+20. 学校九月份用煤560千克，十月份计划用煤是九月份的$\dfrac{9}{10}$, 而十月份实际用煤比计划节约了$\dfrac{1}{12}$，十月份比计划节约用煤多少千克？
 $\\[8em]$
 
-21. 某校有学生680人，六年级占全校人数的1/4，其中男生人数占六年级的9/17，六年级女生多少人？
+21. 某校有学生680人，六年级占全校人数的$\dfrac{1}{4}$，其中男生人数占六年级的$\dfrac{9}{17}$，六年级女生多少人？
 $\\[8em]$
 
-22. 六年级有学生256人，有5/8参加了数学兴趣小组，参加数学兴趣小组的学生2/5是男生，求参加数学小组的女生占六年级总人数的几分之几？
+22. 六年级有学生256人，有$\dfrac{5}{8}$参加了数学兴趣小组，参加数学兴趣小组的学生$\dfrac{2}{5}$是男生，求参加数学小组的女生占六年级总人数的几分之几？
 $\\[8em]$
 
-23. 自行车厂去年计划生产自行车36万辆，上半年完成5/9，下半年完成7/9，结果超产一部分，超产多少万辆？
+23. 自行车厂去年计划生产自行车36万辆，上半年完成 $\dfrac{5}{9}$，下半年完成 $\dfrac{7}{9}$，结果超产了一部分，问超产了多少万辆？
