update grade 5 math on 8-28-2020

--- a/primary/grade5/exercise/分数乘除法练习题-1.md
+++ b/primary/grade5/exercise/分数乘除法练习题-1.md
@@ -1,7 +1,9 @@
 # 分数乘法练习题(一)
 
 **要求**：
-（1）先约分，后乘除；（2）结果必须是最简分数或整数
+（1）先约分，后乘除；（2）结果必须是最简分数或整数   
+
+约分举例说明：$\dfrac{10}{9}\times\dfrac{3}{5}=\dfrac{\bcancel{10}^2}{\bcancel{9}^3}\times\dfrac{\bcancel{3}^1}{\bcancel{5}^1}=\dfrac{2}{3}$   
 
 $\dfrac{9}{11}×8=\qquad \qquad \qquad\dfrac{3}{6}×\dfrac{2}{9}=\qquad \qquad \qquad\dfrac{5}{9}×\dfrac{7}{2}=\\[1em]
 \dfrac{1}{10}×\dfrac{9}{4}=\qquad\qquad \qquad
