--- a/primary/grade5/exercise/分数乘除法练习题-2.md
+++ b/primary/grade5/exercise/分数乘除法练习题-2.md
@@ -1,6 +1,7 @@
 # 分数乘除法练习题(二)
-**要求**：除法化成乘法，除以一个数等于乘以这个数的倒数，。  
+**要求**：除法化成乘法，除以一个数等于乘以这个数的**倒数**。  
 （1）先约分后再乘；（2）结果化为最简分数；（3）写出全过程  
+
 举例说明：$10\div\dfrac{5}{3}=\bcancel{10}^2\times\dfrac{3}{\bcancel{5}^1}=2\times 3=6$   
 
 $12÷\dfrac{3}{5}=\qquad \qquad\qquad
