--- a/primary/grade5/exercise/分数乘除法综合练习题-3.md
+++ b/primary/grade5/exercise/分数乘除法综合练习题-3.md
@@ -1,4 +1,4 @@
-# 分数乘法练习题（三）
+# 分数乘除法综合练习题（三）
 
 ## 一、计算
 
@@ -53,19 +53,19 @@ $\dfrac{5}{4} × \dfrac{1}{10} ×\dfrac{1}{6}=\qquad \qquad\dfrac{1}{5} ＋ \dfr
 
 ## 五、应用题
 
-1. 甲乙两地相距420千米,一辆汽车行驶了全程的 $\dfrac{5}{7}$ , 行驶了多少千米?$\\[5em]$
+1. 甲乙两地相距 **420** 千米,一辆汽车行驶了全程的 $\dfrac{5}{7}$ , 行驶了多少千米?$\\[5em]$
 
 
 
 
 
-2. 一个果园占地20公顷,其中的 $\dfrac{2}{5}$ 种苹果树, $\dfrac{1}{4}$ 种梨树, 苹果树和梨树各种了多少公顷?$\\[5em]$
+2. 一个果园占地 **20** 公顷,其中的 $\dfrac{2}{5}$ 种苹果树, $\dfrac{1}{4}$ 种梨树, 苹果树和梨树各种了多少公顷?$\\[5em]$
 
 
 
 
 
-3. 某鞋店进来皮鞋600双. 第一周卖出总数的 $\dfrac{1}{5}$ , 第二周卖出总数的 $\dfrac{3}{8}$。   
+3. 某鞋店进来皮鞋 **600** 双. 第一周卖出总数的 $\dfrac{1}{5}$ , 第二周卖出总数的 $\dfrac{3}{8}$。   
 ⑴两周一共卖出总数的几分之几?   
 ⑵两周一共卖出多少双?   
 ⑶还剩多少双?$\\[9em]$
@@ -78,20 +78,20 @@ $\dfrac{5}{4} × \dfrac{1}{10} ×\dfrac{1}{6}=\qquad \qquad\dfrac{1}{5} ＋ \dfr
 
 
 
-4. 六年级同学给灾区的小朋友捐款. 六一班捐了500元, 六二班捐的是六一
-的$\dfrac{4}{5}$ , 六三班捐的是六二班的 $\dfrac{9}{8}$ 。六三班捐款多少元?$\\[5em]$
+4. 六年级同学给灾区的小朋友捐款. 六一班捐了 **500** 元, 六二班捐的是六一
+的 $\dfrac{4}{5}$ , 六三班捐的是六二班的 $\dfrac{9}{8}$ 。六三班捐款多少元?$\\[5em]$
 
 
 
 
 
-5. 一件西服原价180元,现在的价格比原来降低了$\dfrac{1}{5}$ , 现在的价格是多少元?$\\[5em]$
+5. 一件西服原价 **180** 元,现在的价格比原来降低了 $\dfrac{1}{5}$ , 现在的价格是多少元?$\\[5em]$
 
 
 
 
 
-6. 希望小学三年级有学生216人,四年级的人数比三年级多 $\dfrac{2}{9}$ , 四年级有学生多少人?$\\[5em]$
+6. 希望小学三年级有学生 **216** 人,四年级的人数比三年级多 $\dfrac{2}{9}$ , 四年级有学生多少人?$\\[5em]$
 
 
 
@@ -100,4 +100,4 @@ $\dfrac{5}{4} × \dfrac{1}{10} ×\dfrac{1}{6}=\qquad \qquad\dfrac{1}{5} ＋ \dfr
 
 ## 六、智慧题
 
-甲乙两个仓库, 甲仓存粮30吨, 如果从甲仓中取出$\dfrac{1}{10}$ 放入乙仓, 则两仓存粮数相等。两仓一共存粮多少千克?
+甲乙两个仓库, 甲仓存粮 **30** 吨, 如果从甲仓中取出 $\dfrac{1}{10}$ 放入乙仓, 则两仓存粮数相等。两仓一共存粮多少千克?
