--- a/primary/grade5/exercise/分数除法经典应用题-3.md
+++ b/primary/grade5/exercise/分数除法经典应用题-3.md
@@ -12,7 +12,7 @@ $\\[9em]$
 4. 一根铁丝，第一天用去全长的 $\dfrac{1}{6}$，第二天用去全长的 $\dfrac{1}{3}$，还剩30米，这根铁丝长多少米？
 $\\[9em]$
 
-5. 一辆汽车从甲地开往乙地先行全程的 $\dfrac{1}{8}$，然后又行400千米正好到达，甲乙两地相距多少千米？
+5. 一辆汽车从甲地开往乙地先行全程的 $\dfrac{1}{8}$，然后又行420千米正好到达，甲乙两地相距多少千米？
 $\\[9em]$
 
 6. 一堆煤，第一次运出 $\dfrac{1}{3}$，第二次运出120吨，第三次运出这堆煤的 $\dfrac{1}{4}$ 正好运完，这堆煤共有多少吨？
@@ -24,7 +24,7 @@ $\\[9em]$
 8. 加工一批零件，上午完成 $\dfrac{4}{7}$, 下午又做了20个, 还差 $\dfrac{1}{7}$ 没有完成.这批零件一共多少个？
 $\\[9em]$
 
-9. 从东城到西城，走了全程的 $\dfrac{3}{8}$，离全程的中点还有16千米，东西两城相距多少千米？
+9. 从东城到西城，走了全程的 $\dfrac{3}{8}$，离全程的终点还有16千米，东西两城相距多少千米？
 $\\[9em]$
 
 10. 一辆汽车从甲地开往乙地，已经行了28千米。再行全程的 $\dfrac{1}{3}$ 就正好到达终点，甲乙两地相距多少千米？
