--- a/primary/grade5/exercise/分数除法经典应用题-5.md
+++ b/primary/grade5/exercise/分数除法经典应用题-5.md
@@ -1,30 +1,30 @@
 # 分数除法经典应用题-5
 
-21. 一根绳子三折比四折长12米，这根绳子长多少米？
-$\\[5em]$
+21. 一根绳子 **三折比四折** 长12米，这根绳子长多少米？
+$\\[10em]$
 
-22. 一辆汽车4小时行全程的6/7，行完全程要几小时？
-$\\[5em]$
+22. 一辆汽车 **4** 小时行全程的 $\dfrac{6}{7}$，行完全程要几小时？
+$\\[10em]$
 
-23. 一桶油，用去6千克刚好是剩下的2/5，剩下多少千克？
-$\\[5em]$
+23. 一桶油，用去 **6** 千克刚好是剩下的 $\dfrac{2}{5}$，剩下多少千克？
+$\\[10em]$
 
-24. 给小朋友分苹果，第一天分给36个，刚好是剩下的4/7，还剩下多少个苹果？
-$\\[5em]$
+24. 给小朋友分苹果，第一天分给 **36** 个，刚好是剩下的 $\dfrac{4}{7}$，还剩下多少个苹果？
+$\\[10em]$
 
-25. 一筐苹果连筐重60千克，卖掉1/4后连筐重45千克，求筐重多少千克？
-$\\[5em]$
+25. 一筐苹果连筐重 **60** 千克，卖掉 $\dfrac{1}{4}$ 后连筐重 **45** 千克，求筐重多少千克？
+$\\[10em]$
 
-26. 一桶油连桶重20千克，用去3/5后，连桶重5千克，求油桶重多少千克？
-$\\[5em]$
+26. 一桶油连桶重 **20** 千克，用去 $\dfrac{3}{5}$ 后，连桶重 **5** 千克，求油桶重多少千克？
+$\\[10em]$
 
-27. 农场有一批果树，苹果树比梨树多1/8，梨树比苹果树少80棵，有梨树多少棵？
-$\\[5em]$
+27. 农场有一批果树，苹果树比梨树多 $\dfrac{1}{8}$，梨树比苹果树少 **80** 棵，有梨树多少棵？
+$\\[10em]$
 
-28. 学校里长跳绳比短跳绳多1/4，短跳绳比长跳绳少56根，有长跳绳多少根？
-$\\[5em]$
+28. 学校里长跳绳比短跳绳多 $\dfrac{1}{4}$，短跳绳比长跳绳少 **56** 根，有长跳绳多少根？
+$\\[10em]$
 
-29. 今年小明的年龄比的大海大1/6，大海比小明小2岁，小明今年几岁？
-$\\[5em]$
+29. 今年小明的年龄比的大海大 $\dfrac{1}{6}$，大海比小明小 **2** 岁，小明今年几岁？
+$\\[10em]$
 
-30. 五年级男生比女生人数多1/4，女生比男生少8人，五年级有男生多少人？
+30. 五年级男生比女生人数多 $\dfrac{1}{4}$，女生比男生少 **8** 人，五年级有男生多少人？
