--- a/primary/grade5/exercise/分数除法经典应用题-6.md
+++ b/primary/grade5/exercise/分数除法经典应用题-6.md
@@ -1,30 +1,30 @@
 # 分数除法经典应用题-6
 
-31. 牧场山羊比绵羊少1/4，绵羊比山羊多180只，有绵羊多少只？
-$\\[5em]$
+31. 牧场山羊比绵羊少 $\dfrac{1}{4}$，绵羊比山羊多 **180** 只，有绵羊多少只？
+$\\[10em]$
 
-32. 小红的画片比小兰的多80张，小兰的画片是小红的2/5，小红有多少张？
-$\\[5em]$
+32. 小红的画片比小兰的多 **80** 张，小兰的画片是小红的 $\dfrac{2}{5}$，小红有多少张？
+$\\[10em]$
 
-33. 新建一所学校用去125万元，比计划节约1/10，节约多少万元？
-$\\[5em]$
+33. 新建一所学校用去 **125** 万元，比计划节约 $\dfrac{1}{10}$，节约多少万元？
+$\\[10em]$
 
-34. 图书馆共有科技书和故事书7800本，故事书比科技书少1/5，有科技书多少本？
-$\\[5em]$
+34. 图书馆共有科技书和故事书 **7800** 本，故事书比科技书少 $\dfrac{1}{5}$，有科技书多少本？
+$\\[10em]$
 
-35. 学校计划今年用电1500度，实际比计划多用1/4，多用多少度？
-$\\[5em]$
+35. 学校计划今年用电 **1500** 度，实际比计划多用 $\dfrac{1}{4}$，多用多少度？
+$\\[10em]$
 
-36. 今年产鲜鱼20万吨，比去年增产1/5，增产多少万吨？
-$\\[5em]$
+36. 今年产鲜鱼 **20** 万吨，比去年增产 $\dfrac{1}{5}$，增产多少万吨？
+$\\[10em]$
 
-37. 修一条公路，已修了480米，比全长的3/4少20米，这条路一共有多少米？
-$\\[5em]$
+37. 修一条公路，已修了 **480** 米，比全长的 $\dfrac{3}{4}$ 少 **20** 米，这条路一共有多少米？
+$\\[10em]$
 
-38. 一堆煤，烧了8吨，比这堆煤的3/5少16吨，这堆煤有多少吨？
-$\\[5em]$
+38. 一堆煤，烧了 **8** 吨，比这堆煤的 $\dfrac{3}{5}$ 少 **16** 吨，这堆煤有多少吨？
+$\\[10em]$
 
-39. 加工一批零件,已做好了456个，比计划的3/5多3个,这批零件共多少个？
-$\\[5em]$
+39. 加工一批零件,已做好了 **456** 个，比计划的 $\dfrac{3}{5}$ 多 **3** 个,这批零件共多少个？
+$\\[10em]$
 
-40. 一批木材，第一次运出1/5还多3立方米，第二次运出19立方米，还差3/5没有运出，这批木材共有多少立方米？
+40. 一批木材，第一次运出 $\dfrac{1}{5}$ 还多 **3** 立方米，第二次运出 **19** 立方米，还差 $\dfrac{3}{5}$ 没有运出，这批木材共有多少立方米？
