--- a/primary/grade5/exercise/分数除法经典应用题-9.md
+++ b/primary/grade5/exercise/分数除法经典应用题-9.md
@@ -1,30 +1,30 @@
 # 分数除法经典应用题-9
 
-61. 一辆汽车要在两天内运完一批水果，第一天运全部的2/5，比第二天少运16吨，这批水果有多少吨？
-$\\[5em]$
+61. 一辆汽车要在两天内运完一批水果，第一天运全部的 $\dfrac{2}{5}$，比第二天少运 **16** 吨，这批水果有多少吨？
+$\\[10em]$
 
-62. 三队合修一条公路，甲队修全长的2/5，乙队比甲队少修48米，丙队修了15千米，这条路长多少米？
-$\\[5em]$
+62. 三队合修一条公路，甲队修全长的 $\dfrac{2}{5}$，乙队比甲队少修 **48** 米，丙队修了 **15** 千米，这条路长多少米？
+$\\[10em]$
 
-63. 一桶油第一次用去1/4，第二次比第一次多用去30千克，桶中还剩1/5，这桶油一共多少千克？
-$\\[5em]$
+63. 一桶油第一次用去 $\dfrac{1}{4}$，第二次比第一次多用去 **30** 千克，桶中还剩 $\dfrac{1}{5}$，这桶油一共多少千克？
+$\\[10em]$
 
-64. 小英看一本书，第一天看了全书的1/3，第二天比第一天少13页，这时还有一半没有看，这本书有多少页？
-$\\[5em]$
+64. 小英看一本书，第一天看了全书的 $\dfrac{1}{3}$，第二天比第一天少 **13** 页，这时还有一半没有看，这本书有多少页？
+$\\[10em]$
 
-65. 一批煤第一天烧去5/9吨，第二天烧去余下的5/9，两天共烧去2吨，这堆煤共多少吨?
-$\\[5em]$
+65. 一批煤第一天烧去 $\dfrac{5}{9}$ 吨，第二天烧去余下的 $\dfrac{5}{9}$，两天共烧去 **2** 吨，这堆煤共多少吨?
+$\\[10em]$
 
-66. 看一本书，第一天看了全书的4/33，第二天比第一天多看7页，这时已看的页数是没看的页数的3/8，这本书共有多少页？
-$\\[5em]$
+66. 看一本书，第一天看了全书的 $\dfrac{4}{33}$，第二天比第一天多看 **7** 页，这时已看的页数是没看的页数的 $\dfrac{3}{8}$，这本书共有多少页？
+$\\[10em]$
 
-67. 商店有苹果200箱，梨120箱，分别取出相等数量去卖，所剩的梨正好是苹果的1/5，问拿出多少箱苹果和橘子去卖？
-$\\[5em]$
+67. 商店有苹果 **200** 箱，梨 **120** 箱，分别取出相等数量去卖，所剩的梨正好是苹果的 $\dfrac{1}{5}$，问拿出多少箱苹果和橘子去卖？
+$\\[10em]$
 
-68. 有一根不到6米长的竹竿，如果竹竿的一端开始量3米做个记号A，从另一头测量3米做个记号B，那么AB问距离是全长的1/6，求这根竹竿长几米？
-$\\[5em]$
+68. 有一根不到 **6** 米长的竹竿，如果竹竿的一端开始量 **3** 米做个记号A，从另一头测量 **3** 米做个记号B，那么AB问距离是全长的 $\dfrac{1}{6}$，求这根竹竿长几米？
+$\\[10em]$
 
-69. 六一中队有四个小队，第一二两个小队共有19人，第二三四小队共有35人，第二小队占全中队的1/5，全中队一共多少人？
-$\\[5em]$
+69. 六一中队有四个小队，第一二两个小队共有 **19** 人，第二三四小队共有 **35** 人，第二小队占全中队的 $\dfrac{1}{5}$，全中队一共多少人？
+$\\[10em]$
 
-70. 甲乙共有图书128本，乙丙共有图书160本，甲的是丙的2/7，丙有多少本？
+70. 甲乙共有图书 **128** 本，乙丙共有图书 **160** 本，甲的是丙的 $\dfrac{2}{7}$，丙有多少本？
