--- a/primary/grade5/exercise/暑假作业（四年级数学）.md
+++ b/primary/grade5/exercise/暑假作业（四年级数学）.md
@@ -3,6 +3,7 @@
 1. 百货商店运来300双球鞋，分别装在2个木箱和6个纸箱里。如果2个纸箱同1个木箱装的球鞋一样多，每个木箱比每个纸箱多装多少双球鞋？Page14
 
 2. 不计算，直接在圆圈中填上 “>” “<” 或 “=” Page21   
+
     $(1)\; 345\div 46 \bigcirc\;10 \qquad (2)\; 897\div 39 \bigcirc \; 20$   
     $(3)\; 1103\div 58 \bigcirc\;20 \qquad (4)\; 998\div 27 \bigcirc \; 30$   
     $(5)\; 644\div 52 \bigcirc\;10 \qquad (6)\; 2004\div 97 \bigcirc \; 20$   
@@ -15,6 +16,7 @@
    (2) 实际比原计划减少了10人。  
 
    $\underline{\qquad\qquad\qquad\qquad\qquad\qquad\qquad}$  
+
 4. 用2,2,4,8 这四个数，通过 $+ - \times \div$四则运算，列成得数是24的算式，你能列出几个？Page 24   
    $\underline{\qquad\qquad\qquad\qquad}\qquad \underline{\qquad\qquad\qquad\qquad}$   
 
@@ -22,30 +24,37 @@
 
    思路：$24=3\times8=4\times6=16+8=\cdots$
    $(4-2\div2)\times8, (2+4)\div2\times8,(8\div2+2)\times4,2\times2\times4+8$
+
 5. 如果把下面各数的末尾添上“0”，哪些数的大小不变（右框中）？哪些数的大小变化（左框中）？把它们分别放入各自的框中。Page27  
+
    $2.3\quad 54 \quad 0.07 \quad 600 \quad 5.0 \quad 905 \quad 30.008 \quad 210 \quad 10.01 \quad 36.00$  
+   
    ![大小变化](大小变化.png#=60x30)
 
 6. 我是一个两位数，个位上的数字与十位上的数字乘积与它们的和相等，猜猜我是谁？   
    答：是_________
+
 7. 机械厂要加工2400个零件，计划每天加工75个。改进技术后，实际工作效率提高到原来的2倍。加工完这批零件实际提前了多少天？Page30    
+
 8. 把下面的图形分成大小相等，形状相同的6块，如何划分？Page30
 
-    ![分割成6块](分割成6块.png#pic_center=60x50)
+   ![分割成6块](分割成6块.png#pic_center=60x50)
 
 9. 巧拼台布   
    有两块正方形台布，边长都是1m，小明家买了一张边长为1.3m的正方形桌子，两块台布都不合适，丢掉又太可惜了，你能替小明想办法，把两块台布拼成一块大台布（布料没有剩余）吗？
 
-
+   ![巧拼台布](巧拼台布.png)
+   
 10. 下图中有10个苹果，请你画三个圆圈，将这些苹果一一分隔开。
 
+   ![区间划分苹果](区间划分苹果.png#pic_center=60x60)
 
 11. 算面积
 
-    ![计算面积](算面积.png#pic_center=60x60)
+   ![计算面积](算面积.png#pic_center=60x60)
 
 12. 划分等边三角形为8个完全相等的直角三角形
-
-    ![分割三角形](分割等边三角形为8个直角三角形.png#pic_center=60x60)
+   
+   ![分割三角形](分割等边三角形为8个直角三角形.png#pic_center=60x60)
 
 13. 
