--- a/primary/grade5/exercise/分数除法经典应用题-7.md
+++ b/primary/grade5/exercise/分数除法经典应用题-7.md
@@ -1,30 +1,30 @@
 # 分数除法经典应用题-7
 
-41. 生产一批玩具，先生产计划的2/5，又接着生产了760个，这时起超过计划的1/6，计划生产这批玩具多少个？
-$\\[5em]$
+41. 生产一批玩具，先生产计划的 $\dfrac{2}{5}$，又接着生产了 **760** 个，这时起超过计划的 $\dfrac{1}{6}$，计划生产这批玩具多少个？
+$\\[10em]$
 
-42. 自行车厂计划生产一批自行车，实际上半月完成计划的5/8，下半月完成计划的9/14结果比计划超产450辆，计划生产多少辆？
-$\\[5em]$
+42. 自行车厂计划生产一批自行车，实际上半月完成计划的 $\dfrac{5}{8}$，下半月完成计划的 $\dfrac{9}{14}$ 结果比计划超产 **450** 辆，计划生产多少辆？
+$\\[10em]$
 
-43. 服装厂计划生产一批童装，上半年完成计划的5/9，如果下半年还生产这些就超产600套，计划生产童装多少套？
-$\\[5em]$
+43. 服装厂计划生产一批童装，上半年完成计划的 $\dfrac{5}{9}$，如果下半年还生产这些就超产 **600** 套，计划生产童装多少套？
+$\\[10em]$
 
-44. 造纸厂去年上半年完成全年的3/4, 再生产2000吨就可以超产500吨，去年计划造纸多少吨？
-$\\[5em]$
+44. 造纸厂去年上半年完成全年的 $\dfrac{3}{4}$, 再生产 **2000** 吨就可以超产 **500** 吨，去年计划造纸多少吨？
+$\\[10em]$
  
-45. 化肥厂去年上半年完成计划的3/5, 下半年和上半年如果生产的同样多就可以超产20万吨，计划生产化肥多少万吨？
-$\\[5em]$
+45. 化肥厂去年上半年完成计划的 $\dfrac{3}{5}$, 下半年和上半年如果生产的同样多就可以超产 **20** 万吨，计划生产化肥多少万吨？
+$\\[10em]$
 
-46. 修一条360千米的路，已修的比没修的多1/4，还有多少千米没修？
-$\\[5em]$
+46. 修一条 **360** 千米的路，已修的比没修的多 $\dfrac{1}{4}$，还有多少千米没修？
+$\\[10em]$
 
-47. 一本书共50页，看的比没看的3/4多15页，看了多少页？
-$\\[5em]$
+47. 一本书共 **50** 页，看的比没看的 $\dfrac{3}{4}$ 多 **15** 页，看了多少页？
+$\\[10em]$
 
-48. 一堆黄沙，运出12吨后，余下的比原有的3/4还多2吨，这批黄沙原来多少吨？
-$\\[5em]$
+48. 一堆黄沙，运出 **12** 吨后，余下的比原有的 $\dfrac{3}{4}$ 还多 **2** 吨，这批黄沙原来多少吨？
+$\\[10em]$
 
-49. 加工一批零件，已经加工2/5，余下的比已完成的多700个，这批零件一共多少个？
-$\\[5em]$
+49. 加工一批零件，已经加工 $\dfrac{2}{5}$，余下的比已完成的多 **700** 个，这批零件一共多少个？
+$\\[10em]$
 
-50. 小红看一本故事书，已经看完96页，这是看完的比没看的少1/5，这本书有多少页
+50. 小红看一本故事书，已经看完 **96** 页，这是看完的比没看的少 $\dfrac{1}{5}$，这本书有多少页
