--- a/primary/grade5/exercise/分数除法经典应用题-8.md
+++ b/primary/grade5/exercise/分数除法经典应用题-8.md
@@ -1,30 +1,30 @@
 # 分数除法经典应用题-8
 
-51. 修一条公路已经修了1/4, 剩下的比已修的多50千米. 这条公路长多少千米？
-$\\[5em]$
+51. 修一条公路已经修了 $\dfrac{1}{4}$, 剩下的比已修的多 **50** 千米. 这条公路长多少千米？
+$\\[10em]$
 
-52. 有一堆煤运出80吨后，剩下的比原有的1/4还多5吨，这吨煤原来多少吨？
-$\\[5em]$
+52. 有一堆煤运出 **80** 吨后，剩下的比原有的 $\dfrac{1}{4}$ 还多 **5** 吨，这吨煤原来多少吨？
+$\\[10em]$
 
-53. 一堆煤已烧了80吨，比这堆煤的3/5少16吨，这堆煤有多少吨？
-$\\[5em]$
+53. 一堆煤已烧了 **80** 吨，比这堆煤的 $\dfrac{3}{5}$ 少 **16** 吨，这堆煤有多少吨？
+$\\[10em]$
 
-54. 制造一艘轮船计划用330万元，实际比计划的3/5还少2万元，实际用多少万元？
-$\\[5em]$
+54. 制造一艘轮船计划用 **330** 万元，实际比计划的 $\dfrac{3}{5}$ 还少 **2** 万元，实际用多少万元？
+$\\[10em]$
 
-55. 一种商品原来售价是400元，先降价1/4，又提价1/4，现在售价多少元？
-$\\[5em]$
+55. 一种商品原来售价是 **400** 元，先降价 $\dfrac{1}{4}$，又提价 $\dfrac{1}{4}$，现在售价多少元？
+$\\[10em]$
 
-56. 学校两个运动队共有队员90人，如果从A队调出1/10到B队, 那么两队人数相等，A队原来有队员多少人？
-$\\[5em]$
+56. 学校两个运动队共有队员 **90** 人，如果从A队调出 $\dfrac{1}{10}$ 到B队, 那么两队人数相等，A队原来有队员多少人？
+$\\[10em]$
 
-57. 两个书架，甲放书的本数是乙的3/4，如果甲给乙15本，两个书架上的书就相等了，乙书架原有书多少本？
-$\\[5em]$
+57. 两个书架，甲放书的本数是乙的 $\dfrac{3}{4}$，如果甲给乙 **15** 本，两个书架上的书就相等了，乙书架原有书多少本？
+$\\[10em]$
 
-58. 两车分别从甲乙两城相对开出，4小时相遇，已知客车每小时行72千米，相遇时货车行了全程的1/3，甲乙两城相距多少千米？
-$\\[5em]$
+58. 两车分别从甲乙两城相对开出，**4** 小时相遇，已知客车每小时行 **72** 千米，相遇时货车行了全程的 $\dfrac{1}{3}$，甲乙两城相距多少千米？
+$\\[10em]$
 
-59. 一堆煤，第一天用去1/3，第二天比第一天少用250千克，这批煤还剩650千克, 这堆煤原有多少千克？
-$\\[5em]$
+59. 一堆煤，第一天用去 $\dfrac{1}{3}$，第二天比第一天少用 **250** 千克，这批煤还剩 **650** 千克, 这堆煤原有多少千克？
+$\\[10em]$
 
-60. 师徒二人生产一批零件，师傅比徒弟多做19个，徒弟做的是总数的3/7，这批零件共有多少个？
+60. 师徒二人生产一批零件，师傅比徒弟多做 **19**个，徒弟做的是总数的 $\dfrac{3}{7}$，这批零件共有多少个？
