Update Grade3 math 9-3-2020

--- a/primary/grade2/订正本-1.md
+++ b/primary/grade2/订正本-1.md
@@ -25,8 +25,8 @@ Course: Math
 $$\Large 568+123 ,\qquad \qquad 7891-2351\\[4em]$$
 
 ## 在下列（  ）中，最大能填整数多少？
-$$\Large (\;)\times 6<27, \qquad 7+17>8\times(\;)\\[2em]
- (\;)-8<6\times9-9, \qquad 9>(\;)\div 8\\[2em]$$
+$$\Large (\quad)\times 6<27, \qquad 7+17>8\times(\quad)\\[2em]
+ (\quad)-8<6\times9-9, \qquad 9>(\quad)\div 8\\[2em]$$
 
 ## 纠错
 1. 明明在计算“$\Large 6+\square \times 5$"时弄错了运算顺序，先算加法后算乘法了，结果得数是 $\Large 40$,正确的得数应该是多少？
