--- a/primary/grade5/费一腾-四升五.md
+++ b/primary/grade5/费一腾-四升五.md
@@ -17,13 +17,14 @@ Duration： 2020年7月3日暑假~
 5. 唯一的偶素数是2，最小的奇素数是3，1和0既不是素数也不是合数，最小的合数是4
 6. 哥德巴赫猜想Goldbach Conjecture：任何不小于4的偶数都可以拆成两个素数之和。
 7. 合数可以拆成若干个素数的乘积，所以素数是合数的基础。
-
 8. 
-
 
 ## 分解素因数
 
-1. 素数定义
+1. 短除法
+2. 素数树法
+3. 
+
 ## 最大公约数
 
 ## 最小公倍数
@@ -33,4 +34,20 @@ Duration： 2020年7月3日暑假~
 ## 分数加减法规则
 
 ## 分数乘除法规则
+
+## 小数加减乘除法
+## 循环小数（无限小数）
+## 不循环小数（无限小数）
+## 近似数（精度）
+## 简易方程（一元一次方程）
+## 列方程解应用题
+## 统计初步——平均数
+
+## 几何面积计算
+
+### 平行四边形
+### 三角形
+### 梯形
+### 组合图形及其分解
+### 面积模型
 
